Closed
Bug 841308
Opened 12 years ago
Closed 12 years ago
Bug 832641 caused panels to flicker as they're animating open
Categories
(Core :: Widget, defect)
Tracking
()
VERIFIED
FIXED
mozilla22
People
(Reporter: MattN, Assigned: mattwoodrow)
References
Details
(Keywords: regression)
Attachments
(2 files)
|
246.84 KB,
video/webm
|
Details | |
|
4.05 KB,
patch
|
roc
:
review+
bajaj
:
approval-mozilla-aurora+
lsblakk
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
There is a flicker drawing the new downloads panel and #social-notification-panel. Clicking on the download button or on one of the social provider's buttons should open a panel with a slight (20px) animation of a translateY but this recently started looking quite bad with a lot of flickering. Note that occasionally the flicker is not noticeable. See the attached screen recording of expected and actual behaviours but note that the flickering doesn't seem as bad in the video.
Last good nightly: 2013-01-23
First bad nightly: 2013-01-24
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=2876e73c9b6f&tochange=98ea4d294369
I suspected the cause was bug 832641 (http://hg.mozilla.org/mozilla-central/rev/2d5b54f00e2e ) so I backed that patch out locally and the problem went away. That patch was uplifted all the way to beta (19).
changeset: 119576:2d5b54f00e2e
user: Matt Woodrow <mwoodrow@mozilla.com>
date: Wed Jan 23 18:46:36 2013 +1300
summary: Bug 832641 - Invalidate popups when they become visible rather than handling invalidations while they are hidden. r=roc
Comment 1•12 years ago
|
||
Thanks - given where we are in the cycle and the severity of this issue, this is a wontfix for FF19. Would like to hear Gavin's opinion on tracking for FF20 and up. I think we'd take a low risk fix, but this likely doesn't need to track there either.
| Reporter | ||
Comment 2•12 years ago
|
||
We may be able to workaround this for affected panels by removing the transition but I haven't confirmed this.
Comment 3•12 years ago
|
||
I think we should track for investigation in 20.
Assignee: nobody → matt.woodrow
Updated•12 years ago
|
| Assignee | ||
Comment 4•12 years ago
|
||
We were correctly invalidating and scheduling a paint, but we were compositing the old content before the refresh driver ran and updated it.
This seems to work, but I don't know anything about the cocoa widget code.
Attachment #715323 -
Flags: review?(roc)
Attachment #715323 -
Flags: review?(roc) → review+
| Assignee | ||
Comment 5•12 years ago
|
||
Comment 6•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
Comment 7•12 years ago
|
||
Looks like we need an uplift nomination here - also asking QA to verify the fix on nightly.
| Assignee | ||
Comment 8•12 years ago
|
||
Comment on attachment 715323 [details] [diff] [review]
Make WillPaintWindow work for cocoa popups
[Approval Request Comment]
Bug caused by (feature/regressing bug #): Bug 832641
User impact if declined: Flicking popups with the social sidebar
Testing completed (on m-c, etc.): Been on m-c for a week
Risk to taking this patch (and alternatives if risky): Reasonably low risk, no alternative fix known.
String or UUID changes made by this patch: None
Attachment #715323 -
Flags: approval-mozilla-beta?
Attachment #715323 -
Flags: approval-mozilla-aurora?
Comment 9•12 years ago
|
||
Comment on attachment 715323 [details] [diff] [review]
Make WillPaintWindow work for cocoa popups
Already approving the low risk patch on aurora to get more test coverage in preparation for beta uplift(before 3/12) once QA verifies on nightly/aurora.
Attachment #715323 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 10•12 years ago
|
||
(In reply to Lukas Blakk [:lsblakk] from comment #7)
> asking QA to verify the fix on nightly.
I confirm the fix is verified on Latest Nightly (2013-03-07)
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.8; rv:22.0) Gecko/20130307 Firefox/22.0
(20130307030926)
Comment 11•12 years ago
|
||
status-firefox22:
--- → fixed
Comment 12•12 years ago
|
||
(In reply to Ryan VanderMeulen [:RyanVM] from comment #11)
> https://hg.mozilla.org/releases/mozilla-aurora/rev/9b6f8360af61
Ryan is in plan a push for beta too?
Updated•12 years ago
|
Attachment #715323 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 13•12 years ago
|
||
(In reply to MarioMi (:MarioMi) from comment #12)
> (In reply to Ryan VanderMeulen [:RyanVM] from comment #11)
> > https://hg.mozilla.org/releases/mozilla-aurora/rev/9b6f8360af61
>
> Ryan is in plan a push for beta too?
This is going to require more fixing up for beta than I'm comfortable doing. Matt's going to have to handle the uplift.
| Assignee | ||
Comment 14•12 years ago
|
||
Updated•12 years ago
|
Comment 15•12 years ago
|
||
I confirm the fix is verified on FF 20b5 and Latest Aurora too. Mac OS 10.7:
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.7; rv:20.0) Gecko/20100101 Firefox/20.0(20130313170052)
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.7; rv:21.0) Gecko/20130313 Firefox/21.0(20130313042013)
Updated•12 years ago
|
Comment 17•12 years ago
|
||
Sorry for last reply it automatically changed Status while trying to clear "verifyme" from keywords.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•