Bug 841308 - Make WillPaintWindow be called for cocoa popups. r=roc, a=bajaj