widget/cocoa/nsChildView.h
@@ -473,6 +473,7 @@ public:
   
   virtual bool      DispatchWindowEvent(nsGUIEvent& event);
 
+  void WillPaintWindow();
   bool PaintWindow(nsIntRegion aRegion, bool aIsAlternate);
 
 #ifdef ACCESSIBILITY
@@ -541,6 +542,8 @@ protected:
     nsCOMPtr<nsIWidget> widget = do_CreateInstance(kCPopUpCID);
     return widget.forget();
   }
+
+  nsIWidget* GetWidgetForListenerEvents();
 
 protected:
 
